--- a/pong/style.css
+++ b/pong/style.css
@@ -1,3 +1,12 @@
 body {
   background-color: grey;
 }
+
+.center {
+  padding-left: 0;
+  padding-right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  width: 600px;
+}
