--- a/pong/style.css
+++ b/pong/style.css
@@ -2,11 +2,20 @@ body {
   background-color: grey;
 }
 
+h1 {
+  padding: 1rem;
+  font-weight: 900;
+}
+
 .center {
-  padding-left: 0;
-  padding-right: 0;
   margin-left: auto;
   margin-right: auto;
   display: block;
   width: 600px;
+  padding-bottom: 100px;
+  padding-top: 25px;
+}
+
+.buttonBox {
+  text-align: center;
 }
